--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.4",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
@@ -40,7 +42,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4",
-    "daisyui": "^4.12.10"
+    "daisyui": "^4.12.10",
+    "tailwindcss": "^3.4.4"
   }
 }
