--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.2",
-    "axios": "^1.7.4",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-simple-typewriter": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -47,7 +50,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
+    "cypress": "^13.14.2",
     "daisyui": "^4.12.10",
-    "tailwindcss": "^3.4.10"
+    "html-webpack-plugin": "^5.6.0",
+    "tailwindcss": "^3.4.12",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
