--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +47,9 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^13.14.2",
     "daisyui": "^4.12.10",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.10"
   }
 }
