--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "stripe": "^16.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
