--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.2",
     "axios": "^1.7.4",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "npm": "^10.8.3",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
@@ -25,6 +27,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "recharts": "^2.12.7",
     "stripe": "^16.12.0",
     "web-vitals": "^2.1.4"
   },
